[gd_scene load_steps=9 format=2]

[ext_resource path="res://images/map3d.png" type="Texture" id=1]
[ext_resource path="res://graph/fin.png" type="Texture" id=2]
[ext_resource path="res://TEXT.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scènes/Scène_fin.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "début",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "fin"
tracks/0/type = "value"
tracks/0/path = NodePath("img:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "fin" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("img:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "off"
loop = true

[sub_resource type="Animation" id=4]
resource_name = "étoiles"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("etoiles:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Scène_fin" type="Node2D"]
script = ExtResource( 4 )

[node name="img" type="AnimatedSprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1.772, 1.772 )
z_index = -10
frames = SubResource( 1 )
animation = "début"
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fin = SubResource( 2 )
anims/off = SubResource( 3 )
"anims/étoiles" = SubResource( 4 )

[node name="TEXT" parent="." instance=ExtResource( 3 )]
margin_left = 5.0
margin_top = 426.478
margin_right = 1920.0
margin_bottom = 1377.48
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_text = "test"
text = "test"

[node name="Timer_text_1" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer_text_2" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Timer_text_3" type="Timer" parent="."]
wait_time = 8.5
one_shot = true

[node name="Timer_text_4" type="Timer" parent="."]
wait_time = 7.5
one_shot = true

[node name="fin" type="Timer" parent="."]
wait_time = 7.0

[node name="etoiles" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1.772, 1.772 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer_text_1" to="." method="_on_Timer_start_timeout"]
[connection signal="timeout" from="Timer_text_2" to="." method="_on_Timer_text_2_timeout"]
[connection signal="timeout" from="Timer_text_3" to="." method="_on_Timer_text_3_timeout"]
[connection signal="timeout" from="Timer_text_4" to="." method="_on_Timer_text_4_timeout"]
[connection signal="timeout" from="fin" to="." method="_on_fin_timeout"]
